--- a/projekti-1A.css
+++ b/projekti-1A.css
@@ -1,15 +1,37 @@
 body {
-
+  background-image: url("kaarme2.jpeg");
+  background-size: 100%;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-color: forestgreen;
 }
 
-.ylaOtsikko {
+#ylaOtsikko{
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+}
 
+.kokoLomake {
+  border: solid black 4px;
+  width: 400px;
+  background-color: rgba(50, 200, 50, 0.7);
+  padding: 10px;
+  border-radius: 15px 0 15px 0;
+}
+#tekstiKentta {
+  width: 350px;
+  padding: 5px;
 }
 
 .lomakkeet {
-
+  background-color: ;
+  padding-left: 20px;
+  padding-bottom: 10px
 }
 
 .buttons {
-  
+  display: inline-block;
+  padding-left: 5px;
 }
