--- a/projekti-6/projekti-6.css
+++ b/projekti-6/projekti-6.css
@@ -20,6 +20,10 @@ button {
   margin-left: 15px;
 }
 
+h1 {
+  padding-bottom: 10px;
+}
+
 table {
   background-color: #F0F8FF;
   padding: 20px 10px;
