--- a/omaProjekti/piirrustusOhjelma.css
+++ b/omaProjekti/piirrustusOhjelma.css
@@ -15,7 +15,7 @@ canvas {
   margin: 30px 100px 0 0;
   background: #000;
   border-radius: 2px;
-  float: right;
+  float: left;
 }
 
 #kynänPaksuus::-webkit-slider-thumb {
@@ -86,6 +86,6 @@ button {
   background: #000;
   border-radius: 50%;
   float: left;
-  margin: 5px 8px;
+  margin: 5px 150px 5px 8px;
   cursor: pointer;
 }
